# TradingAgents-CN

./: .env.example  .gitignore  Dockerfile.backend  docker-compose.hub.nginx.yml  pyproject.toml  requirements-lock-macos.txt
app/services/: database_screening_service.py
docs/: agent_runtime_guardrails.md
docs/configuration/: eastmoney_skills.md
frontend/src/types/: analysis.ts
frontend/src/views/Screening/: index.vue
scripts/: agent_memory_utils.py  ask_position.py  explain_monitor_event.py  install_stock_monitor_cron.sh  install_stock_monitor_user_cron.sh  monitor_watchlist.py  prefetch_fundamentals_cache.py  report_paths.py  run_eastmoney_skills.py  run_event_agent_report.py  run_full_stock_report.py  run_memory_reflection.py  run_quant_backtest.py  run_quant_layer.py  run_value_layer.py  send_dingtalk.py
tradingagents/agents/analysts/: china_market_analyst.py  fundamentals_analyst.py  news_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  chromadb_config.py  google_tool_handler.py  memory.py  skills_context.py
tradingagents/dataflows/: data_source_manager.py  fundamentals_cache.py  fundamentals_quality.py  report_quality.py
tradingagents/dataflows/news/: realtime_news.py
tradingagents/dataflows/providers/china/: __init__.py  eastmoney_skills.py  integrated.py
tradingagents/graph/: propagation.py  trading_graph.py
tradingagents/llm_clients/: openai_client.py
tradingagents/quant/: __init__.py  backtest.py  engine.py  training.py
tradingagents/utils/: stock_validator.py
web/components/: analysis_results.py  results_display.py  sidebar.py
web/utils/: analysis_runner.py  mongodb_report_manager.py  report_exporter.py
